Bug 385709 - <> in GECOS are wrongly displayed
Summary: <> in GECOS are wrongly displayed
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.6
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-10-13 17:25 UTC by Christian (Fuchs)
Modified: 2017-11-10 09:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian (Fuchs) 2017-10-13 17:25:53 UTC
If a user has <> in GECOS  (might depend on it being coloured too) they are displayed as &lt; and &gt;  instead of <>  when using  /whois on them. 

Steps to reproduce: 

Connect with <> in the GECOS, e.g.  <MyName>   (colour it, just to be sure) 

Do a /whois on that connection from Konversation

Actual results:  <> are displayed as &lt; and &gt; 

Expected results: <> are displayed properly
Comment 1 argonel 2017-11-10 09:09:25 UTC
Git commit 7fe6c18847e10703ce40854ef2a05c62e4183818 by Eli MacKenzie.
Committed on 10/11/2017 at 08:54.
Pushed by argonel into branch '1.7'.

Don't double escape angle brackets in GECOS field

M  +1    -1    src/irc/inputfilter.cpp

https://commits.kde.org/konversation/7fe6c18847e10703ce40854ef2a05c62e4183818