Don't double escape angle brackets in GECOS field

BUG:385709